<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BasicSmsReceiver</string>
    <string name="action_settings">Settings</string>

    <string name="btnCancel">Cancel</string>
    <string name="titleSenderName" >Sender name:</string>>
    <string name="titleMessageContent">Message content:</string>
    <string name="titleTimestamp">Time stamp:</string>

    <string name='titleSmsCounter'>Sms Messages Processed:</string>
    <string name="btnResetCounter">Reset</string>


</resources>
