<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.dima.basicsmsreceiver.smsreceiver.StartAndWait">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/titleCounter"
                    android:text="@string/titleSmsCounter"
                    android:textStyle="bold"
                    android:padding="5dip" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/counter"
                    android:padding="5dip" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titleSenderName"
                    android:id="@+id/title_sender_name"
                    android:textStyle="bold"
                    android:padding="5dip" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:id="@+id/sender_name"
                    android:padding="5dip" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/titleTimeStamp"
                    android:text="@string/titleTimestamp"
                    android:textStyle="bold"
                    android:padding="5dip" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/timeStamp"
                    android:padding="5dip" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/titleMessageContent"
                    android:text="@string/titleMessageContent"
                    android:textStyle="bold"
                    android:padding="5dip" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/sms_content"
                    android:layout_below="@+id/sms_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:background="@drawable/back"
                    android:padding="5dip" />
            </LinearLayout>


            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="bottom">


                <Button
                    android:layout_height="wrap_content"
                    android:text="@string/btnCancel"
                    android:id="@+id/cancel_button"
                    android:layout_alignParentLeft="true"
                    android:layout_weight="1"
                    android:layout_width="wrap_content" />

                <Button
                    android:layout_height="wrap_content"
                    android:id="@+id/btnResetCounter"
                    android:text="@string/btnResetCounter"
                    android:layout_alignParentRight="true"
                    android:layout_weight="1"
                    android:layout_width="wrap_content" />
            </RelativeLayout>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
